--- a/templates/includes/sections/explanation-left.twig
+++ b/templates/includes/sections/explanation-left.twig
@@ -1,4 +1,9 @@
-<section class="section">
+{% if backgroundColor is defined %}
+	{% set style = 'style=background-color:' ~ backgroundColor %}
+{% else %}
+	{% set style = null %}
+{% endif %}
+<section class="section" {{ style ? style : null }}>
 	<div class="container">
 		<div class="row middle-xs reverse">
 			<div class="col col-sm-12 col-md-6">
