--- a/templates/includes/sections/featured-testimonal-single.twig
+++ b/templates/includes/sections/featured-testimonal-single.twig
@@ -1,4 +1,9 @@
-<section class="section">
+{% if backgroundColor is defined %}
+	{% set style = 'style=background-color:' ~ backgroundColor %}
+{% else %}
+	{% set style = null %}
+{% endif %}
+<section class="section" {{ style ? style : null }}>
 	<div class="container">
 		<div class="row">
 			<div class="col">
