--- a/templates/includes/sections/jumbo-cta.twig
+++ b/templates/includes/sections/jumbo-cta.twig
@@ -1,4 +1,9 @@
-<section class="section">
+{% if backgroundColor is defined %}
+	{% set style = 'style=background-color:' ~ backgroundColor %}
+{% else %}
+	{% set style = null %}
+{% endif %}
+<section class="section" {{ style ? style : null }}>
 	<div class="section-inner bg-lightgrey">
 		<div class="container">
 			<div class="row center-xs text-center">
