--- a/templates/includes/sections/jumbo-header.twig
+++ b/templates/includes/sections/jumbo-header.twig
@@ -1,4 +1,9 @@
-<section class="section">
+{% if backgroundColor is defined %}
+	{% set style = 'style=background-color:' ~ backgroundColor %}
+{% else %}
+	{% set style = null %}
+{% endif %}
+<section class="section" {{ style ? style : null }}>
 	<div class="container">
 		<div class="row middle-xs center-xs text-center-xs">
 			<div class="col col-xs-12 col-md-6 text-left-md">
