--- a/src/style/02-base/_headings.scss
+++ b/src/style/02-base/_headings.scss
@@ -2,27 +2,27 @@
 
 h1, .h1 {
 	font-size: 4rem;
-	font-weight: bold;
+	font-weight: 600;
 }
 
 h2, .h2 {
 	font-size: 3rem;
-	font-weight: bold;
+	font-weight: 600;
 }
 
 h3, .h3 {
 	font-size: 2rem;
-	font-weight: bold;
+	font-weight: 600;
 }
 
 h4, .h4 {
 	font-size: 1.5rem;
-	font-weight: bold;
+	font-weight: 600;
 }
 
 h5, .h5 {
 	font-size: 1.125rem;
-	font-weight: bold;
+	font-weight: 600;
 }
 
 p, a {
