--- a/templates/includes/partials/header.twig
+++ b/templates/includes/partials/header.twig
@@ -74,6 +74,7 @@
 	<link rel="icon" type="image/png" href="{{ faviconPath }}/favicon-128.png" sizes="128x128" />
 
 	{# CSS #}
+	<link rel="stylesheet" href="https://use.typekit.net/dpj5gga.css">
 	<link rel="stylesheet" type="text/css" href="includes/css/style.css">
 </head>
 <body>
