Updating sections and adding new ones

--- a/src/style/00-settings/_settings.scss
+++ b/src/style/00-settings/_settings.scss
@@ -20,5 +20,6 @@ $colors: (
 
 $link-color: $blue;
 $font-family-base: 'Soleil';
+$font-weight-base: 300;
 
 @import '~baseguide/scss/baseguide/00-settings/settings';
