--- a/src/style/02-base/_headings.scss
+++ b/src/style/02-base/_headings.scss
@@ -36,7 +36,9 @@ p, a {
 .text-editor-wrapper p {
 	font-size: 1.125rem !important;
 }
-
+.section-header {
+	margin-bottom: 5rem;
+}
 
 @include mq($until: md) {
 	h1, .h1 {
