--- a/templates/includes/sections/featured-companies.twig
+++ b/templates/includes/sections/featured-companies.twig
@@ -7,7 +7,7 @@
 	<div class="section-inner bg-lightgrey">
 		<div class="container">
 			<div class="row center-xs middle-xs text-center">
-				<div class="col col-xs-12 space-xs-up">
+				<div class="col col-xs-12 section-header">
 					<h2>{{ heading }}</h2>
 					{{ text }}
 				</div>
