--- a/templates/includes/sections/jumbo-cta.twig
+++ b/templates/includes/sections/jumbo-cta.twig
@@ -3,8 +3,8 @@
 {% else %}
 	{% set style = null %}
 {% endif %}
-<section class="section" {{ style ? style : null }}>
-	<div class="section-inner bg-lightgrey">
+<section class="section">
+	<div class="section-inner"  {{ style ? style : null }}>
 		<div class="container">
 			<div class="row center-xs text-center">
 				<div class="col col-xs-12">
