--- a/src/style/04-components/_card.scss
+++ b/src/style/04-components/_card.scss
@@ -3,8 +3,9 @@
 	border-radius: 5px;
 	padding: 2rem;
 	text-align: center;
-	margin-top: 5rem;
 	position: relative;
+	background-color: white;
+	width: 100%;
 
 	img {
 		width: 5rem;
@@ -20,6 +21,18 @@
 		&.social-icon {
 			width: 1.5rem;
 			max-width: 1.5rem;
+			margin: 0;
+		}
+	}
+	&.quote {
+		margin: 0;
+
+		img {
+			margin: 0;
+			margin-right: 1.25rem;
+			width: 3rem;
+		}
+		p {
 			margin: 0;
 		}
 	}
