--- a/templates/includes/sections/3-up-people.twig
+++ b/templates/includes/sections/3-up-people.twig
@@ -6,7 +6,7 @@
 <section class="section" {{ style ? style : null }}>
 	<div class="container">
 		<div class="row center-xs">
-			<div class="col col-xs-12 text-center">
+			<div class="col col-xs-12 text-center section-header">
 				<h2>{{ heading }}</h2>
 				{{ text }}
 			</div>
