--- a/templates/includes/sections/3-up.twig
+++ b/templates/includes/sections/3-up.twig
@@ -6,7 +6,7 @@
 <section class="section" {{ style ? style : null }}>
 	<div class="container">
 		<div class="row">
-			<div class="col col-xs-12 text-center">
+			<div class="col col-xs-12 text-center section-header">
 				<h2>{{ heading }}</h2>
 				<p>{{ text }}</p>
 			</div>
