--- a/templates/includes/sections/accordion-faq.twig
+++ b/templates/includes/sections/accordion-faq.twig
@@ -6,7 +6,7 @@
 <section class="section" {{ style ? style : null }}>
 	<div class="container">
 		<div class="row">
-			<div class="col col-xs-12 text-center space-xs-up">
+			<div class="col col-xs-12 text-center section-header">
 				<h2>{{ heading }}</h2>
 				{{ text }}
 			</div>
