--- a/templates/includes/sections/list-pricing.twig
+++ b/templates/includes/sections/list-pricing.twig
@@ -6,12 +6,12 @@
 <section class="section" {{ style ? style : null }}>
 	<div class="container">
 		<div class="row">
-			<div class="col col-xs-12 text-center">
+			<div class="col col-xs-12 text-center section-header">
 				<h2>{{ heading }}</h2>
 				<p>{{ text }}</p>
 			</div>
 			<div class="col col-xs-12 col-md-6 col-lg-4 col-lg-offset-2">
-				<div class="card flex center">
+				<div class="card flex center list-pricing">
 					<div>
 						<h4>{{ pricings[0].titel }}</h4>
 						<p class="price h1">${{ pricings[0].price }}</p>
@@ -27,7 +27,7 @@
 			</div>
 
 			<div class="col col-xs-12 col-md-6 col-lg-4">
-				<div class="card flex center">
+				<div class="card flex center list-pricing">
 					<div>
 						<h4>{{ pricings[1].titel }}</h4>
 						<p class="price h1">${{ pricings[1].price }}</p>
