Lighthouse report: optimising

--- a/src/style/04-components/_footer.scss
+++ b/src/style/04-components/_footer.scss
@@ -16,6 +16,12 @@ footer {
 			text-decoration: none;
 		}
 	}
+	@include mq($until: md) {
+		.menu li a{
+			padding: 0.5rem 0;
+			display: block;
+		}
+	}
 }
 
 .footer-logo {
