--- a/templates/includes/sections/video.twig
+++ b/templates/includes/sections/video.twig
@@ -8,7 +8,7 @@
 		<div class="row center-xs">
 			<div class="col col-xs-12 col-md-8 text-editor-wrapper">
 				<div class="embed-responsive">
-					<iframe src="{{ embedCode }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" width="500" height="281" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					<iframe src="{{ embedCode }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="Embedded video" width="500" height="281" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
