--- a/templates/includes/sections/featured-companies.twig
+++ b/templates/includes/sections/featured-companies.twig
@@ -1,10 +1,10 @@
-{% if backgroundColor is defined %}
+{% if backgroundColor %}
 	{% set style = 'style=background-color:' ~ backgroundColor %}
 {% else %}
 	{% set style = null %}
 {% endif %}
-<section class="section" {{ style ? style : null }}>
-	<div class="section-inner bg-lightgrey">
+<section class="section">
+	<div class="section-inner" {{ style }}>
 		<div class="container">
 			<div class="row center-xs middle-xs text-center">
 				<div class="col col-xs-12 section-header">
