--- a/templates/includes/sections/featured-testimonal-single.twig
+++ b/templates/includes/sections/featured-testimonal-single.twig
@@ -1,9 +1,9 @@
-{% if backgroundColor is defined %}
+{% if backgroundColor %}
 	{% set style = 'style=background-color:' ~ backgroundColor %}
 {% else %}
 	{% set style = null %}
 {% endif %}
-<section class="section" {{ style ? style : null }}>
+<section class="section" {{ style }}>
 	<div class="container">
 		<div class="row">
 			<div class="col">
