--- a/templates/includes/sections/quotes.twig
+++ b/templates/includes/sections/quotes.twig
@@ -1,9 +1,9 @@
-{% if backgroundColor is defined %}
+{% if backgroundColor %}
 	{% set style = 'style=background-color:' ~ backgroundColor %}
 {% else %}
 	{% set style = null %}
 {% endif %}
-<section class="section" {{ style ? style : null }}>
+<section class="section" {{ style }}>
 	<div class="container">
 		<div class="row center-xs section-header">
 			<div class="col col-xs-12 text-center">
@@ -21,7 +21,7 @@
 			{# Display their contents #}
 			{% for block in superTableBlocks %}
 			<div class="col col-xs-12 col-md-6 col-lg-4 flex between-xs">
-					<div class="card quote text-left-xs between-xs flex flex-column space-xs-up">
+					<div class="card quote text-left-xs between-xs flex flex-column">
 						<h5 class="space-xs-up">{{block.quote}}</h5>
 						<div class="flex start-xs middle-xs">
 							<img class="img-fluid" src="{{ block.image.one().url }}" alt="{{ block.image.one().title }}"/>
