--- a/templates/includes/sections/video.twig
+++ b/templates/includes/sections/video.twig
@@ -1,9 +1,9 @@
-{% if backgroundColor is defined %}
+{% if backgroundColor %}
 	{% set style = 'style=background-color:' ~ backgroundColor %}
 {% else %}
 	{% set style = null %}
 {% endif %}
-<section class="section" {{ style ? style : null }}>
+<section class="section" {{ style }}>
 	<div class="container">
 		<div class="row center-xs">
 			<div class="col col-xs-12 col-md-8 text-editor-wrapper">
