--- a/templates/includes/sections/jumbo-header.twig
+++ b/templates/includes/sections/jumbo-header.twig
@@ -5,7 +5,7 @@
 {% endif %}
 <section class="section" {{ style }}>
 	<div class="container">
-		<div class="row middle-xs center-xs text-center-xs">
+		<div class="row middle-xs center-xs">
 			<div class="col col-xs-12 col-md-6 text-left-md">
 				<div class="text-padding">
 					<h1>{{ heading }}</h1>
