navbar: styling and changes

--- a/src/style/00-settings/_settings.scss
+++ b/src/style/00-settings/_settings.scss
@@ -1,6 +1,6 @@
 $black: #000;
 $white: #fff;
-$blue: #304FFE;
+$blue: #177ee3;
 $yellow: #FCF22B;
 $lightgrey: #F9FBFC;
 $mediumgrey: #E6E6E6;
@@ -19,7 +19,7 @@ $colors: (
 );
 
 $link-color: $blue;
-$font-family-base: 'Soleil';
+$font-family-base: 'Soleil', Arial, Sans-Serif;
 $font-weight-base: 300;
 $headings-font-weight: 600;
 
