Change icon sizes

--- a/templates/includes/sections/3-up.twig
+++ b/templates/includes/sections/3-up.twig
@@ -13,7 +13,7 @@
 			{% for card in cards %}
 			<div class="col col-xs-12 col-md-4">
 				<div class="card">
-					<img src="{{ card.image.one.url }}" alt="pencil icon"/>
+					<img class="three-up-icon" src="{{ card.image.one.url }}" alt="pencil icon"/>
 					<div class="text-left text-center-md">
 						<h4>{{ card.titleCard }}</h4>
 						<p class="small">{{ card.text }}</p>
