--- a/src/style/04-components/_card.scss
+++ b/src/style/04-components/_card.scss
@@ -13,6 +13,12 @@
 		max-width: 5rem;
 		margin-bottom: 1rem;
 
+		&.three-up-icon {
+			width: auto;
+			height: 3rem;
+			max-height: 3rem;
+		}
+
 		&.card-img-large {
 			width: 11.25rem;
 			max-width: 11.25rem;
