--- a/src/style/04-components/_button.scss
+++ b/src/style/04-components/_button.scss
@@ -9,11 +9,12 @@ $button-padding-horizontal: 2em;
 
 .btn {
 	font-size: 1rem;
+	font-weight: 600;
 }
 @include mq($from: md) {
 	.btn-large {
-		font-size: 1.5rem;
-		padding: 1rem 2rem;
+		font-size: 1.2rem;
+		padding: 1rem 1.8rem;
 	}
 }
 
